screen saver overflow fixed

--- a/css/clock.css
+++ b/css/clock.css
@@ -6,6 +6,7 @@ body {
     background-color: #000;
     display: grid;
     place-content: center;
+    overflow: hidden;
 }
 
 .clock {
